--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
        "4        the most fun film of the summer      1"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,7 @@
        " array([0, 0, 0, 1, 1], dtype=int64))"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -124,10 +124,20 @@
      "output_type": "stream",
      "text": [
       "class: 0\n",
-      "prob: 0.000711111111111111\n",
+      "prob: -9.703612836494584\n",
       "class: 1\n",
-      "prob: 0.0008\n"
+      "prob: -10.32503104127363\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[0]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -166,7 +176,7 @@
     "    def fit(self, X_train, y_train):\n",
     "        # identify unique classes and calculate prior probabilities p(c) for each class\n",
     "        self.clases, counts = np.unique(y_train, return_counts=True)\n",
-    "        self.Pcs = [ci/len(X_train) for ci in counts]\n",
+    "        self.Pcs = [np.log(ci/len(X_train)) for ci in counts]\n",
     "        #print(f'Pcs: {self.Pcs}')\n",
     "\n",
     "        # calculate bag of words per class\n",
@@ -213,14 +223,19 @@
     "                priorc = self.Pcs[ci]\n",
     "\n",
     "                # likelohood probability\n",
-    "                lp = 1\n",
+    "                lp = 0\n",
     "                for wi in self.tokenize(xi, unk=False):\n",
-    "                    lp = lp * (self.count(wi, ci) + 1) / (self.bags_len[ci] + 1)\n",
-    "                probc = priorc*lp # probability of xi belonginf to class c\n",
+    "                    lp = lp + np.log((self.count(wi, ci) + 1) / (self.bags_len[ci] + len(self.voc)))\n",
+    "                probc = priorc + lp # probability of xi belonginf to class c\n",
     "                auxp.append(probc)\n",
     "                print(f'prob: {probc}')\n",
-    "        \n",
     "            \n",
+    "            # choose max probability\n",
+    "            maxi = np.argmax(auxp)\n",
+    "            preds.append(self.clases[maxi])\n",
+    "        \n",
+    "        return preds\n",
+    "\n",
     "    def tokenize(self, text, unk=True):\n",
     "        # eliminate symbols on input text\n",
     "        sims = \"!\\\"#$%&()*+-.,'/:;<=>?@[\\]^_`{|}~\\n\"\n",
@@ -244,15 +259,12 @@
     "                if wi in self.voc:\n",
     "                    aux.append(wi)\n",
     "            words = aux\n",
-    "\n",
     "        return words\n",
-    "\n",
-    "\n",
     "\n",
     "\n",
     "test = NaiveBayes()\n",
     "test.fit(X_train, y_train)\n",
-    "test.predict(['predictable with no fun'])\n"
+    "test.predict(['predictable with no fun'])"
    ]
   }
  ],
@@ -272,7 +284,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.19"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
