--- a/experiments.ipynb
+++ b/experiments.ipynb
@@ -16,7 +16,7 @@
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from Classifiers import NaiveBayes\n",
+    "from NB import NaiveBayes\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import f1_score, confusion_matrix, ConfusionMatrixDisplay\n",
     "import matplotlib.pyplot as plt\n",
